--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../img/roberto-nickson-5ui0tfMC5ts-unsplash.jpg');
+    background-image: url('../img/jason-beard-cap.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -9,4 +9,57 @@ h1,
 h2 {
     margin-left: 25px;
     color: white;
+}
+
+.med-screen-text {
+    display: none;
+}
+
+.lg-screen-text {
+    display: none;
+}
+
+@media (min-width: 400px) {
+    body {
+        background-image: url('../img/screaming-jnutt.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+}
+
+@media (min-width:769px) {
+    body {
+        background-image: url('../img/cap-up-nostil.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+    .med-screen-text {
+        display: grid;
+    }
+    .sm-screen-text {
+        display: none;
+    }
+    .lg-screen-text {
+        display: none;
+    }
+}
+
+@media (min-width: 1024px) {
+    body {
+        background-image: url('../img/jason-beard-cap.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+    .lg-screen-text {
+        display: grid;
+    }
+    .sm-screen-text {
+        display: none;
+    }
+    .med-screen-text {
+        display: none;
+    }
 }
