--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ h2 {
     color: pink;
 }
 
+img {
+    border: 7px solid salmon;
+}
+
 .med-screen-text {
     display: none;
 }
@@ -25,6 +29,7 @@ h2 {
 }
 
 .overlay {
+    position: absolute;
     background-color: blue;
     opacity: 0.5;
     height: 100vh;
@@ -50,6 +55,7 @@ ul {
         color: blue;
     }
     .overlay {
+        position: absolute;
         background-color: green;
         opacity: 0.5;
         height: 100vh;
