bg image update

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../img/roberto-nickson-5ui0tfMC5ts-unsplash.jpg');
+    background-image: url('..img/jason-beard-cap.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -45,7 +45,7 @@ ul {
 
 @media (min-width: 400px) {
     body {
-        background-image: url('../img/roberto-nickson-5ui0tfMC5ts-unsplash.jpg');
+        background-image: url('../img/cap-up-nostil.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         height: 100vh;
@@ -62,9 +62,17 @@ ul {
     }
 }
 
+#mobile-menu {
+    float: right;
+    display: grid;
+    height: 100vh;
+    width: 200px;
+    background-color: red;
+}
+
 @media (min-width:769px) {
     body {
-        background-image: url('../img/roberto-nickson-5ui0tfMC5ts-unsplash.jpg');
+        background-image: url('../img/screaming-jnutt.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         height: 100vh;
@@ -93,7 +101,7 @@ ul {
 
 @media (min-width: 1024px) {
     body {
-        background-image: url('../img/roberto-nickson-5ui0tfMC5ts-unsplash.jpg');
+        background-image: url('../img/pexels-max-andrey-sky-bg.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         height: 100vh;
